--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -4474,8 +4474,9 @@ The same holds when taking the~$\circ_i^\SU$ operations instead of the $\circ_i^
     Finally, the compatibility of $\Psi$ with units and the symmetric group actions are straightfoward to check, see \cite[Def.~4.17 \& Thm.~4.18]{LA21}.
 \end{proof}
 
-Note that $\Psi$ is \emph{not} a morphism of ``Hopf" operads, \ie it does not commute with the respective diagonals $\LAD$ and $\SUD$. 
-\Guillaume{Give explicit counterexample}
+\begin{example}
+Note that $\Psi$ is \emph{not} a morphism of ``Hopf" operads, i.e. it does not commute with the respective diagonals $\LAD$ and $\SUD$. 
+\end{example}
 
 \begin{corollary}
     The four topological operad structures on the operahedra are all isomorphic. 
@@ -4499,19 +4500,38 @@ Note that $\Psi$ is \emph{not} a morphism of ``Hopf" operads, \ie it does not co
 Even though the diagonals of the permutahedra are isomorphic, and the operad structures that they induce are as well, the tensor products of homotopy operads and $\Ainf$-morphisms that they define are \emph{not} isomorphic.
 The purpose of this short section is to exhibit counterexamples.
 
+\begin{example}
+    We have that...
+\end{example}
+
+\Guillaume{Donner une ref pour les infini-morphismes}
+
+\begin{theorem}
+    For any pair of homotopy operads $\mathcal{P},\mathcal{Q}$, the two tensor products~$\mathcal{P} \otimes_\LA \mathcal{Q}$ and~$\mathcal{P} \otimes_\SU \mathcal{Q}$ defined by the $\LA$ and $\SU$ diagonals are not isomorphic in the category of homotopy operads with their $\infty$-morphisms.
+\end{theorem}
+
+\begin{proof}
+Il faut voir qu'il ne peut pas exister un infini-isomorphisme entre les deux?? En Effet! Si c'etait un infini-iso, ce serait l'identite en degre zero
+\end{proof}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section*{Aknowledgements}
 
-Hugh Thomas (everything started in Montr\'eal), Sylvie Corteel for hyperplane arrangements
-
+Hugh Thomas (everything started in Montr\'eal)
+Sylvie Corteel for hyperplane arrangements
 Saneblidze--Umble for useful correspondence
+Galashin (asked about characteristic polynomials). 
+Organizers of the Simon Center conference.
 
-We would like to thank the Max Planck Institute for Mathematics in Bonn where part of this work was carried out. BDO was partially supported by the French ANR grants ALCOHOL (ANR-19-CE40-0006), CARPLO (ANR-20-CE40-0007), HighAGT (ANR-20-CE40-0016) and S3 (ANR-20-CE48-0010). GLA and KS were supported by the Australian Research Council Future Fellowship FT210100256. VP was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and by the French--Austrian project PAGCAP (ANR-21-CE48-0020 \& FWF I 5788). KS was supported by an Australian Government Research Training Program (RTP) Scholarship.
+BDO was partially supported by the French ANR grants ALCOHOL (ANR-19-CE40-0006), CARPLO (ANR-20-CE40-0007), HighAGT (ANR-20-CE40-0016) and S3 (ANR-20-CE48-0010). 
+GLA would like to thank the Max Planck Insitute for Mathematics in Bonn where part of this work was carried out. 
+GLA and KS were supported by the Australian Research Council Future Fellowship FT210100256. 
+KS was supported by an Australian Government Research Training Program (RTP) Scholarship.
+VP was partially supported by the French ANR grant CHARMS (ANR-19-CE40-0017) and by the French--Austrian project PAGCAP (ANR-21-CE48-0020 \& FWF I 5788). 
 
-Galashin (asked about characteristic polynomials). Organizers of the Simon Center conference.
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
