--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -247,17 +247,20 @@
 \begin{document}
 
 \begin{abstract}
-The purpose of this article is to provide a systematic combinatorial-geometric study of cellular diagonals on the permutahedra. 
-First, we give general enumeration results for the faces of any geometric diagonal, using a theorem of Zavlasky on the M\"obius function of hyperplane arrangements.
-The numbers obtained involve covering trees of bipartite graphs and Catalan families. 
-Second, we prove that there are only two operadic families of diagonals on the permutahedra, and we give a bijection of their facets with planar bipartite trees and characterize their vertices as pattern-avoiding pairs of permutations.
-A corollary of our study is that the Saneblidze--Umble diagonal can be recovered by a choice of vectors in the fundamental hyperplane arrangements of the permutahedra, resolving a conjecture of the third-named author.  
+We provide a a systematic combinatorial and enumerative study of cellular diagonals on the permutahedra. 
+The first part of the paper is dedicated to the combinatorics of certain hyperplane arrangements obtained as the union of $\ell$ generically translated copies of the classical braid arrangement.
+Based on Zaslavsky's theory, we derive enumerative results on the faces of these arrangements involving combinatorial objects named partition forests and rainbow forests.
+This yields in particular nice formulas for the number of regions and bounded regions of these arrangements in terms of exponentials of Fuss-Catalan numbers.
+By duality, the specialization of these results to the case $\ell = 2$ gives the enumeration of any geometric diagonal of the permutahedron.
+The second part of the paper focusses on more advanced combinatorial properties of the diagonals of the permutahedra.
+We prove that there are only two operadic families of diagonals on the permutahedra, and we give a bijection of their facets with planar bipartite trees and characterize their vertices as pattern-avoiding pairs of permutations.
+We then show that the Saneblidze--Umble diagonal can be recovered by a choice of vectors in the fundamental hyperplane arrangements of the permutahedra, resolving a conjecture of the third-named author.  
 \end{abstract}
 
-\vspace*{.1cm}
+\vspace*{-.5cm}
 \maketitle
 
-\centerline{\includegraphics[scale=.9]{diagonalPermutahedron3}}
+\centerline{\includegraphics[scale=.85]{diagonalPermutahedron3}}
 
 \newpage
 \enlargethispage{1cm}
